@@ -1,3 +1,6 @@
+2 November 2009: Wouter
+	- Fix bug where autotrust does not work when started with a DS.
+
 29 October 2009: Wouter
 	- iana portlist updated.
 	- edns-buffer-size option, default 4096.
